--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,1 +1,18 @@
-bruh
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AP CSP Web Client</title>
+  </head>
+  <body>
+    <input id="input" type="text" />
+    <button id="btn">Send</button>
+  </body>
+
+  <script>
+    document.getElementById("btn").onclick = async () => {
+      await fetch(`/text?text=${document.getElementById("input").value}`);
+    };
+  </script>
+</html>
