--- a/server/static/index.html
+++ b/server/static/index.html
@@ -341,9 +341,10 @@
   .keys {
     font-family: "Lato", sans-serif;
     text-align: center;
-    width: 500px;
+    width: 350px;
     height: 200px;
     margin: auto;
+    margin-top:200px;
   }
 
   .arr {
