--- a/server/static/index.html
+++ b/server/static/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
-    <div class="keys">
+    <div class="keys" class="prevent-select">
       <div class="up arr"><i class="fa fa-arrow-up"></i></div>
       <br />
       <div class="left arr"><i class="fa fa-arrow-left"></i></div>
@@ -344,7 +344,7 @@
     width: 350px;
     height: 200px;
     margin: auto;
-    margin-top:200px;
+    margin-top: 200px;
   }
 
   .arr {
@@ -403,5 +403,10 @@
       0 0 10px yellow;
     font-size: 100px;
     font-family: serif;
+  }
+  .prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
   }
 </style>
