--- a/server/static/index.html
+++ b/server/static/index.html
@@ -36,21 +36,19 @@
   </body>
 
   <script>
-    async function connectToServer() {
-        const ws = new WebSocket('ws://raspberrypi:6969');
-        while (!(ws.readyState === 1)) {
-
-        }
-        return ws
+    const ws = new WebSocket('ws://raspberrypi:6969');
+    function send(data) {
+      if (ws.readyState === 1) {
+        ws.send(data)
+      }
     }
-    const ws = connectToServer()
     $(document).keydown(function (e) {
       if (e.which == 37) {
         $(".left").addClass("pressed");
         $(".lefttext").text("LEFT");
         $(".left").css("transform", "translate(0, 2px)");
         // fetch("/direction?direction=left");
-        ws.send("left")
+        send("left")
       } else if (e.which == 38) {
         $(".up").addClass("pressed");
         $(".uptext").text("UP");
@@ -58,19 +56,19 @@
         $(".down").css("transform", "translate(0, 2px)");
         $(".right").css("transform", "translate(0, 2px)");
         // fetch("/direction?direction=forward");
-        ws.send("forward")
+        send("forward")
       } else if (e.which == 39) {
         $(".right").addClass("pressed");
         $(".righttext").text("RIGHT");
         $(".right").css("transform", "translate(0, 2px)");
         // fetch("/direction?direction=right");
-        ws.send("right")
+        send("right")
       } else if (e.which == 40) {
         $(".down").addClass("pressed");
         $(".downtext").text("DOWN");
         $(".down").css("transform", "translate(0, 2px)");
         // fetch("/direction?direction=backward");
-        ws.send("backward")
+        send("backward")
       } else if (e.which == 66) {
         $(".b").text("B");
       } else if (e.which == 65) {
@@ -84,7 +82,7 @@
         $(".lefttext").text("");
         $(".left").css("transform", "translate(0, 0)");
         // fetch("/direction?direction=stop");
-        ws.send("stop")
+        send("stop")
       } else if (e.which == 38) {
         $(".up").removeClass("pressed");
         $(".uptext").text("");
@@ -92,19 +90,19 @@
         $(".down").css("transform", "translate(0, 0)");
         $(".right").css("transform", "translate(0, 0)");
         // fetch("/direction?direction=stop");
-        ws.send("stop")
+        send("stop")
       } else if (e.which == 39) {
         $(".right").removeClass("pressed");
         $(".righttext").text("");
         $(".right").css("transform", "translate(0, 0)");
         // fetch("/direction?direction=stop");
-        ws.send("stop")
+        send("stop")
       } else if (e.which == 40) {
         $(".down").removeClass("pressed");
         $(".downtext").text("");
         $(".down").css("transform", "translate(0, 0)");
         // fetch("/direction?direction=stop");
-        ws.send("stop")
+        send("stop")
       } else if (e.which == 66) {
         $(".b").text("");
       } else if (e.which == 65) {
@@ -116,28 +114,28 @@
       $(".lefttext").text("LEFT");
       $(".left").css("transform", "translate(0, 2px)");
       // fetch("/direction?direction=left");
-      ws.send("left")
+      send("left")
     });
 
     $(".left").mouseup(function () {
       $(".lefttext").text("");
       $(".left").css("transform", "translate(0, 0)");
       // fetch("/direction?direction=stop");
-      ws.send("stop")
+      send("stop")
     });
 
     $(".right").mousedown(function () {
       $(".righttext").text("RIGHT");
       $(".right").css("transform", "translate(0, 2px)");
       // fetch("/direction?direction=right");
-      ws.send("right")
+      send("right")
     });
 
     $(".right").mouseup(function () {
       $(".righttext").text("");
       $(".right").css("transform", "translate(0, 0)");
       // fetch("/direction?direction=stop");
-      ws.send("stop")
+      send("stop")
     });
 
     $(".up").mousedown(function () {
@@ -146,7 +144,7 @@
       $(".down").css("transform", "translate(0, 2px)");
       $(".right").css("transform", "translate(0, 2px)");
       // fetch("/direction?direction=forward");
-      ws.send("forward")
+      send("forward")
     });
 
     $(".up").mouseup(function () {
@@ -155,21 +153,21 @@
       $(".down").css("transform", "translate(0, 0)");
       $(".right").css("transform", "translate(0, 0)");
       // fetch("/direction?direction=stop");
-      ws.send("stop")
+      send("stop")
     });
 
     $(".down").mousedown(function () {
       $(".downtext").text("DOWN");
       $(".down").css("transform", "translate(0, 2px)");
       // fetch("/direction?direction=backward");
-      ws.send("backward")
+      send("backward")
     });
 
     $(".down").mouseup(function () {
       $(".downtext").text("");
       $(".down").css("transform", "translate(0, 0)");
       // fetch("/direction?direction=stop");
-      ws.send("stop")
+      send("stop")
     });
 
     /*
