--- a/server/static/index.html
+++ b/server/static/index.html
@@ -29,10 +29,10 @@
       <div class="a noselect"></div>
     </div>
 
-    <link
+    <!-- <link
       href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
       rel="stylesheet"
-    />
+    /> -->
   </body>
 
   <script>
@@ -353,7 +353,7 @@
 </html>
 
 <style>
-  @import url(https://fonts.googleapis.com/css?family=Lato:300);
+  /* @import url(https://fonts.googleapis.com/css?family=Lato:300); */
 
   html {
     background: radial-gradient(#000, #111);
