--- a/server/static/index.html
+++ b/server/static/index.html
@@ -36,7 +36,8 @@
   </body>
 
   <script>
-    const ws = new WebSocket("ws://raspberrypi:6969");
+    var url =  window.location.host.split(":")[0];
+    const ws = new WebSocket(`ws://${url}:6969`);
     function send(data) {
       if (ws.readyState === 1) {
         ws.send(data);
