--- a/server/static/index.html
+++ b/server/static/index.html
@@ -83,7 +83,7 @@
         $(".lefttext").text("");
         $(".left").css("transform", "translate(0, 0)");
         // fetch("/direction?direction=stop");
-        send("stop");
+        send("s");
       } else if (e.which == 38) {
         $(".up").removeClass("pressed");
         $(".uptext").text("");
@@ -91,19 +91,19 @@
         $(".down").css("transform", "translate(0, 0)");
         $(".right").css("transform", "translate(0, 0)");
         // fetch("/direction?direction=stop");
-        send("stop");
+        send("s");
       } else if (e.which == 39) {
         $(".right").removeClass("pressed");
         $(".righttext").text("");
         $(".right").css("transform", "translate(0, 0)");
         // fetch("/direction?direction=stop");
-        send("stop");
+        send("s");
       } else if (e.which == 40) {
         $(".down").removeClass("pressed");
         $(".downtext").text("");
         $(".down").css("transform", "translate(0, 0)");
         // fetch("/direction?direction=stop");
-        send("stop");
+        send("s");
       } else if (e.which == 66) {
         $(".b").text("");
       } else if (e.which == 65) {
@@ -122,7 +122,7 @@
       $(".lefttext").text("");
       $(".left").css("transform", "translate(0, 0)");
       // fetch("/direction?direction=stop");
-      send("stop");
+      send("s");
     });
 
     $(".right").mousedown(function () {
@@ -136,7 +136,7 @@
       $(".righttext").text("");
       $(".right").css("transform", "translate(0, 0)");
       // fetch("/direction?direction=stop");
-      send("stop");
+      send("s");
     });
 
     $(".up").mousedown(function () {
@@ -154,7 +154,7 @@
       $(".down").css("transform", "translate(0, 0)");
       $(".right").css("transform", "translate(0, 0)");
       // fetch("/direction?direction=stop");
-      send("stop");
+      send("s");
     });
 
     $(".down").mousedown(function () {
@@ -168,7 +168,7 @@
       $(".downtext").text("");
       $(".down").css("transform", "translate(0, 0)");
       // fetch("/direction?direction=stop");
-      send("stop");
+      send("s");
     });
 
     /*
